[package]
name = "procfs"
version = "0.14.2"
authors = ["Andrew Chin <achin@eminence32.net>"]
repository = "https://github.com/eminence/procfs"
documentation = "https://docs.rs/procfs/"
description = "Interface to the linux procfs pseudo-filesystem"
readme = "README.md"
keywords = ["procfs", "proc", "linux", "process"]
categories = ["os::unix-apis", "filesystem"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.48"

[features]
default = ["chrono", "flate2"]
serde1 = ["serde"]

[dependencies]
rustix = { version = "0.36.0", features = ["fs", "process", "param", "thread"] }
bitflags = "1.2"
lazy_static = "1.0.2"
chrono = {version = "0.4.20", optional = true, features = ["clock"], default-features = false }
byteorder = {version="1.2.3", features=["i128"]}
hex = "0.4"
flate2 = { version = "1.0.3", optional = true }
backtrace = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"
procinfo = "0.4.2"
failure = "0.1"
libc = "0.2.139"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "cpuinfo"
harness = false
