[workspace]
members = [
    "procfs",
    "procfs-core",
]

[workspace.package]
version = "0.18.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
repository = "https://github.com/eminence/procfs"
keywords = ["procfs", "proc", "linux", "process"]
categories = ["os::unix-apis", "filesystem"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.70"
