[package]
name = "procfs"
documentation = "https://docs.rs/procfs/"
description = "Interface to the linux procfs pseudo-filesystem"
readme = "../README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["chrono", "flate2"]
serde1 = ["serde"]

[dependencies]
procfs-core = { path = "../procfs-core" }
rustix = { version = "0.37.0", features = ["fs", "process", "param", "thread"] }
bitflags = "1.2"
lazy_static = "1.0.2"
chrono = {version = "0.4.20", optional = true, features = ["clock"], default-features = false }
hex = "0.4"
flate2 = { version = "1.0.3", optional = true }
backtrace = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.4"
procinfo = "0.4.2"
failure = "0.1"
libc = "0.2.139"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "cpuinfo"
harness = false
